--- a/CDC+WONDER+API+Example.ipynb
+++ b/CDC+WONDER+API+Example.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "![Logo, Center's for Disease Control and Prevention](masthead_subpage.svg)\n",
+    "![Logo, Center's for Disease Control and Prevention](/cdc-wonder-api/masthead_subpage.svg)\n",
     "\n",
     "# CDC WONDER API Example\n",
     "[CDC WONDER](https://wonder.cdc.gov/) is a query tool from the Centers for Disease Control (CDC) that provides access to a collection of online databases for the analysis of public health data. "
