--- a/CDC+WONDER+API+Example.ipynb
+++ b/CDC+WONDER+API+Example.ipynb
@@ -71,7 +71,7 @@
     "</request-parameters>\n",
     "```\n",
     "\n",
-    "A reference of parameter names and values can be found on [CDC WONDER Wiki page](https://loyola.campuspack.net/Groups/17FA_CS-703-501/Pet_API#/page/364768481#referenceParameters)"
+    "A reference of parameter names and values can be found on [CDC WONDER API README](https://github.com/alipphardt/cdc-wonder-api/tree/master)"
    ]
   },
   {
